@@ -1,5 +1,6 @@
 2012-12-11 Ivan Kartolo <ivan@kartolo.de>
 	* Bug #43064: check if array is given in get_localized_categories userFunc.
+	* Bug #42544: bug fixed wrong link scheme if TYPO3 BE is https
 
 2012-12-09 Ivan Kartolo <iva@kartolo.de>
 	* Bug #41340: fixed recipient header if no name is given
